Fix duation of videos not appearing on mobile YouTube
Fixes #202

--- a/public/content.css
+++ b/public/content.css
@@ -530,3 +530,8 @@ ytd-compact-radio-renderer ytd-badge-supported-renderer, ytd-grid-movie-renderer
     background-color: black;
     border-radius: var(--yt-img-border-radius, none);
 }
+
+/* Making the duration of videos on mobile YouTube appear */
+.video-thumbnail-overlay-bottom-left-right-group {
+    z-index: 1;
+}
